--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
-name: Example Home Assistant add-on repository
-url: 'https://github.com/home-assistant/addons-example'
-maintainer: Awesome Maintainer <awesome@example.com>
+name: p1nrgy Add-ons Repository
+url: "https://github.com/erwindouna/p1nrgy-addon"
+maintainer: Erwin Douna <e.douna@gmail.com>
