--- a/p1nrgy/Dockerfile
+++ b/p1nrgy/Dockerfile
@@ -1,12 +1,19 @@
-# https://developers.home-assistant.io/docs/add-ons/configuration#add-on-dockerfile
-ARG BUILD_FROM
+ARG BUILD_FROM=busybox:dummy
 FROM $BUILD_FROM
+ARG BUILD_ARCH
+ARG HA_RELEASE
 
-# Execute during the build of the image
-ARG TEMPIO_VERSION BUILD_ARCH
-RUN \
-    curl -sSLf -o /usr/bin/tempio \
-    "https://github.com/home-assistant/tempio/releases/download/${TEMPIO_VERSION}/tempio_${BUILD_ARCH}"
-
-# Copy root filesystem
+ENV LANG=C.UTF-8
+# Copy data for add-on
+COPY config.yaml /app/ha_addon_version.json
 COPY rootfs /
+
+# Labels
+LABEL \
+  io.hass.version=$HA_RELEASE \
+  io.hass.type="addon" \
+  io.hass.arch=$BUILD_ARCH \
+  org.opencontainers.image.title="Home Assistant Add-on: p1nrgy"  \
+  org.opencontainers.image.description="p1nrgy is a Home Assistant add-on to passthrough P1 data to MQTT"  \
+  org.opencontainers.image.source="https://github.com/erwindouna/p1nrgy-addon" \
+  org.opencontainers.image.licenses="Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)"
