--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
-name: p1nrgy Add-ons Repository
+name: p1nrgy Add-on Repository
 url: "https://github.com/erwindouna/p1nrgy-addon"
 maintainer: Erwin Douna <e.douna@gmail.com>
