--- a/p1nrgy/config.yaml
+++ b/p1nrgy/config.yaml
@@ -32,4 +32,4 @@ schema:
   dsmr_serial_stopbits: int
   dsmr_serial_timeout: int
   mqtt_topic: str
-image: "ghcr.io/erwindouna/p1nrgy" # TODO: Uncomment this line to use a prebuilt image
+# image: "ghcr.io/erwindouna/p1nrgy" # TODO: Uncomment this line to use a prebuilt image
