--- a/p1nrgy/config.yaml
+++ b/p1nrgy/config.yaml
@@ -12,10 +12,12 @@ services:
   - mqtt:need
 map:
   - share:rw
+uart: true
+usb: true
 options:
   dsmr_enabled: true
   dsmr_mode: "serial"
-  dsmr_serial_device: "/dev/ttyUSB0"
+  dsmr_serial_device: null
   dsmr_serial_baud: 115200
   dsmr_serial_databits: 8
   dsmr_serial_parity: "N"
@@ -25,7 +27,7 @@ options:
 schema:
   dsmr_enabled: bool
   dsmr_mode: str
-  dsmr_serial_device: str
+  dsmr_serial_device: "device(subsystem=tty)"
   dsmr_serial_baud: int
   dsmr_serial_databits: int
   dsmr_serial_parity: str
